--- a/Projeto_DevMedia - 17/index.html
+++ b/Projeto_DevMedia - 17/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <nav>
                     <a href="#Sobre">Sobre</a>
-                    <a href="#Especialidades">Especialidades</a>
+                    <a href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html" target="_blank">Especialidades</a>
                     <a href="#Contato">Contato</a>
                 </nav>
             </div>
