--- a/Projeto_DevMedia - 17/especialidades.html
+++ b/Projeto_DevMedia - 17/especialidades.html
@@ -18,19 +18,19 @@
                         <img src="Imagens/logo.png" alt="Clinica Médica" title="Clinica Médica Life">
                     </a>
                 </div>
-                <nav class="link_2">
-                    <a href="#Sobre">Sobre</a>
-                    <a href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html">Especialidades</a>
-                    <a href="#Contato">Contato</a>
+                <nav class="link_1">
+                    <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/index.html#Sobre">Sobre</a>
+                    <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html">Especialidades</a>
+                    <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/index.html#Contato">Contato</a>
                 </nav>
             </div>
         <div class="links">
             <nav>
-                <a href ="#Ortopedia">Ortopedia</a>
-                <a href="#Pediatria">Pediatria</a>
-                <a href="#Geriatria">Geriatria</a>
-                <a href="#Psicologia">Psicologia</a>
-                <a href="#Fisioterapia">Fisioterapia</a>
+                <a class="link_3" href ="#Ortopedia">Ortopedia</a>
+                <a class="link_3" href="#Pediatria">Pediatria</a>
+                <a class="link_3" href="#Geriatria">Geriatria</a>
+                <a class="link_3" href="#Psicologia">Psicologia</a>
+                <a class="link_3" href="#Fisioterapia">Fisioterapia</a>
             </nav>
         </div>
         <div class="Titulo">
