--- a/Projeto_DevMedia - 17/index.html
+++ b/Projeto_DevMedia - 17/index.html
@@ -14,13 +14,13 @@
             <div class="topo">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="Imagens/logo.png" alt="Clinica Médica" title="Clinica Médica Life">
+                        <img class="link"  src="Imagens/logo.png" alt="Clinica Médica" title="Clinica Médica Life">
                     </a>
                 </div>
                 <nav>
-                    <a href="#Sobre">Sobre</a>
-                    <a href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html" target="_blank">Especialidades</a>
-                    <a href="#Contato">Contato</a>
+                    <a class="link_1" href="#Sobre">Sobre</a>
+                    <a class="link_1" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html" target="_blank">Especialidades</a>
+                    <a class="link_1" href="#Contato">Contato</a>
                 </nav>
             </div>
             <div class="banner">
@@ -77,7 +77,7 @@
                         </div> 
                     </div>
                     <div class="botao_1">
-                        <a href="#VER HORÁRIOS" >VER HORÁRIOS</a>
+                        <a href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html#Ortopedia">VER HORÁRIOS</a>
                     </div>
                 </div>
             </section>
