--- a/Projeto_DevMedia - 17/index.html
+++ b/Projeto_DevMedia - 17/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <nav>
                     <a class="link_1" href="#Sobre">Sobre</a>
-                    <a class="link_1" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html" target="_blank">Especialidades</a>
+                    <a class="link_1" href="https://rodrigodev2023.github.io/Projetos-Curso/Projeto_DevMedia%20-%2017/estilos_especialidades.css" target="_blank">Especialidades</a>
                     <a class="link_1" href="#Contato">Contato</a>
                 </nav>
             </div>
