--- a/Projeto_DevMedia - 17/especialidades.html
+++ b/Projeto_DevMedia - 17/especialidades.html
@@ -19,9 +19,9 @@
                     </a>
                 </div>
                 <nav class="link_1">
-                    <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/index.html#Sobre">Sobre</a>
+                    <a class="link_2" href="index.html#Sobre" >Sobre</a>
                     <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html">Especialidades</a>
-                    <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/index.html#Contato">Contato</a>
+                    <a class="link_2" href="index.html#Contato">Contato</a>
                 </nav>
             </div>
         <div class="links">
