--- a/Projeto_DevMedia - 17/index.html
+++ b/Projeto_DevMedia - 17/index.html
@@ -77,7 +77,7 @@
                         </div> 
                     </div>
                     <div class="botao_1">
-                        <a href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html#Ortopedia">VER HORÁRIOS</a>
+                        <a href="especialidades.html#Ortopedia">VER HORÁRIOS</a>
                     </div>
                 </div>
             </section>
