--- a/Projeto_DevMedia - 17/especialidades.html
+++ b/Projeto_DevMedia - 17/especialidades.html
@@ -20,7 +20,7 @@
                 </div>
                 <nav class="link_1">
                     <a class="link_2" href="index.html#Sobre" >Sobre</a>
-                    <a class="link_2" href="file:///C:/Users/rodri/OneDrive/%C3%81rea%20de%20Trabalho/DevMedia/Projetos/Projetos-CursoDevmedia/Projeto_DevMedia%20-%2017/especialidades.html">Especialidades</a>
+                    <a class="link_2" href="especialidades.html">Especialidades</a>
                     <a class="link_2" href="index.html#Contato">Contato</a>
                 </nav>
             </div>
