--- a/Projeto_DevMedia - 17/especialidades.html
+++ b/Projeto_DevMedia - 17/especialidades.html
@@ -14,7 +14,7 @@
         <header>
             <div class="topo">
                 <div class="logo">
-                    <a href="estilos_especialidades.css">
+                    <a href="especialidades.html">
                         <img src="Imagens/logo.png" alt="Clinica Médica" title="Clinica Médica Life">
                     </a>
                 </div>
