--- a/Projeto_DevMedia - 17/especialidades.html
+++ b/Projeto_DevMedia - 17/especialidades.html
@@ -3,6 +3,7 @@
     <head>
         <title>Especialidades</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Especialidades de médicos dos site">
         <link rel="stylesheet"  href="estilos_especialidades.css">
