--- a/Projeto_DevMedia - 17/index.html
+++ b/Projeto_DevMedia - 17/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Clínica Médica Life</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Atendimento 24 horas, focado em sua saúde">
         <meta name="viewport"    content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="estilos_index.css">
